--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="pull-left">
           <li><a href="file:///C://Users/DJ%20Blay/Desktop/Website/index.html">Home</a></li>
           <li><a href="http://www.vigilantenights.com">Blog</a></li>
-          <li><a href="www.facebook.com">Resume</a></li>
+          <li><a href="/resume.html">Resume</a></li>
         </ul>
         <ul class ="pull-right">
           <li><a href="file:///C://Users/DJ%20Blay/Desktop/Website/about.html">About</a></li>
